parser/src/snapshots/parser__class__tests__super_base.snap
---
source: parser/src/class.rs
expression: result.unwrap()
---
Class {
    class_path: "ch.emilycares.Super",
    source: "",
    access: [],
    imports: [
        Package(
            "ch.emilycares",
        ),
    ],
    name: "Super",
    methods: [],
    fields: [],
    super_class: Name(
        "IOException",
    ),
    super_interfaces: [],
}
