parser/src/snapshots/parser__class__tests__super_interfaces.snap
---
source: parser/src/class.rs
expression: result.unwrap()
---
Class {
    class_path: "ch.emilycares.SuperInterface",
    source: "",
    access: [],
    imports: [
        Package(
            "ch.emilycares",
        ),
        Class(
            "java.util.stream.Stream",
        ),
    ],
    name: "SuperInterface",
    methods: [
        Method {
            access: [
                Public,
            ],
            name: "stream",
            parameters: [],
            throws: [],
            ret: Class(
                "java.util.stream.Stream",
            ),
            source: None,
        },
    ],
    fields: [],
    super_class: None,
    super_interfaces: [
        Name(
            "Collection",
        ),
        Name(
            "List",
        ),
    ],
}
